--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
   <title>Delivery food</title>
 </head>
@@ -11,7 +12,7 @@
   <div class="container">
     <header class="header">
       <img class="logo" src="images/logo.svg" alt="logo">
-      <input class="input search-input" type="text" placeholder="Адрес доставки">
+      <input class="input input-adress" type="text" placeholder="Адрес доставки">
       <div class="buttons">
         <button class="button button-primary">
           <img src="images/user.svg" alt="user" class="button-img">
@@ -23,6 +24,102 @@
         </button>
       </div>
     </header>
+    <section class="promo">
+      <h1 class="promo-title">Онлайн-сервис доставки еды на дом</h1>
+      <p class="promo-text">Блюда из любимого ресторана привезет курьер в перчатках, маске и с антисептиком</p>
+    </section>
+    <section class="restaurants">
+      <div class="restaurants-heading">
+        <h2 class="restaurants-heading__title">Рестораны</h2>
+        <input type="text" class="input input-search" placeholder="Поиск блюд и ресторанов">
+      </div>
+      <div class="cards">
+        <div class="card">
+          <img src="images/pizzaplas.jpg" alt="Пицца плюс" class="card-img">
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">Пицца плюс</h3>
+              <span class="card-tag tag">50 мин</span>
+            </div><!-- /.card-heading -->   
+            <div class="card-info">
+              <div class="raiting">4.5</div>
+              <div class="price">От 900 ₽</div>
+              <div class="category">Пицца</div>
+            </div><!-- /.card-info -->         
+          </div> <!-- /.card-text -->
+        </div><!-- /.card -->
+        <div class="card">
+          <img src="images/tanyki.jpg" alt="Тануки " class="card-img">
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">Тануки</h3>
+              <span class="card-tag tag">50 мин</span>
+            </div><!-- /.card-heading -->
+            <div class="card-info">
+              <div class="raiting">4.5</div>
+              <div class="price">От 900 ₽</div>
+              <div class="category">Пицца</div>
+            </div><!-- /.card-info -->
+          </div> <!-- /.card-text -->
+        </div><!-- /.card -->
+        <div class="card">
+          <img src="images/foodband.jpg" alt="FoodBand" class="card-img">
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">FoodBand</h3>
+              <span class="card-tag tag">50 мин</span>
+            </div><!-- /.card-heading -->
+            <div class="card-info">
+              <div class="raiting">4.5</div>
+              <div class="price">От 900 ₽</div>
+              <div class="category">Пицца</div>
+            </div><!-- /.card-info -->
+          </div> <!-- /.card-text -->
+        </div><!-- /.card -->
+        <div class="card">
+          <img src="images/foodpoint.jpg" alt="Точка еды" class="card-img">
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">Точка еды</h3>
+              <span class="card-tag tag">50 мин</span>
+            </div><!-- /.card-heading -->
+            <div class="card-info">
+              <div class="raiting">4.5</div>
+              <div class="price">От 900 ₽</div>
+              <div class="category">Пицца</div>
+            </div><!-- /.card-info -->
+          </div> <!-- /.card-text -->
+        </div><!-- /.card -->
+        <div class="card">
+          <img src="images/jpizza.png" alt="Жадина-пицца" class="card-img">
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">Жадина-пицца</h3>
+              <span class="card-tag tag">50 мин</span>
+            </div><!-- /.card-heading -->
+            <div class="card-info">
+              <div class="raiting">4.5</div>
+              <div class="price">От 900 ₽</div>
+              <div class="category">Пицца</div>
+            </div><!-- /.card-info -->
+          </div> <!-- /.card-text -->
+        </div><!-- /.card -->
+        <div class="card">
+          <img src="images/pizzaburger.jpg" alt="PizzaBurger" class="card-img">
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">PizzaBurger</h3>
+              <span class="card-tag tag">50 мин</span>
+            </div><!-- /.card-heading -->
+            <div class="card-info">
+              <div class="raiting">4.5</div>
+              <div class="price">От 900 ₽</div>
+              <div class="category">Пицца</div>
+            </div><!-- /.card-info -->
+          </div> <!-- /.card-text -->
+        </div><!-- /.card -->
+      </div><!-- /.cards -->
+    </section>
   </div><!-- /.container -->
 </body>
 </html>
